# bmai

./: .clang-format  .gitignore  BMAI.TXT  BMAI_IN.TXT  BUILDING.MD  CLAUDE.md  CMakeLists.txt  HISTORY.TXT  LICENSE  NOTES.TXT  README.MD  README.TXT  REUSE.toml  STATS.PL  bmai.cpp  bmai.h  bmai.pl  bmai.sln  bmai.vcproj  bmai_ai.cpp  bmai_ai.h  bmai_player.cpp  bmai_test.pl  buttonweavers_skills_cache.json  dp_lib.pl  run.bat  test.in  test.out
.github/: dependabot.yml
.github/.reuse/: reuse.yml
.github/workflows/: cmake.yml  codeql-analysis.yml  license.yml  project-files.yml  reuse.yml
src/: BMC_AI.cpp  BMC_AI.h  BMC_AI_Maximize.cpp  BMC_AI_Maximize.h  BMC_AI_MaximizeOrRandom.cpp  BMC_AI_MaximizeOrRandom.h  BMC_BMAI.cpp  BMC_BMAI.h  BMC_BMAI3.cpp  BMC_BMAI3.h  BMC_BitArray.h  BMC_Die.cpp  BMC_Die.h  BMC_DieData.cpp  BMC_DieData.h  BMC_DieIndexStack.cpp  BMC_DieIndexStack.h  BMC_Game.cpp  BMC_Game.h  BMC_Logger.cpp  BMC_Logger.h  BMC_Man.h  BMC_Move.cpp  BMC_Move.h  BMC_MovePool.cpp  BMC_Parser.cpp  BMC_Parser.h  BMC_Player.cpp  BMC_Player.h  BMC_QAI.cpp  BMC_QAI.h  BMC_RNG.cpp  BMC_RNG.h  BMC_Stats.cpp  BMC_Stats.h  bmai.cpp  bmai.h  bmai_ai.cpp  bmai_ai.h  bmai_lib.cpp  (+13 more)
test/: BMAI3Tests.cpp  CMakeLists.txt  DemoTest.cpp  Insult_in.txt  LegacyFunctions.cpp  ParserTest.cpp  PlayerTest.cpp  SkillTest.cpp  SurrenderDefault-Pass-in.txt  SurrenderOff-Attack-in.txt  SurrenderOff-Pass-in.txt  SurrenderOn-Attack-in.txt  SurrenderOn-Pass-in.txt  Value1_in.txt  Value2_in.txt  _matchers.h  _testutils.h  bmsim_in.txt  bmsim_out.txt  bug105372_in.txt  bug11_in.txt  bug16_in.txt  bug55_a_in.txt  bug55_b_in.txt  bug55_in.txt  legacy.cpp  playertests.cpp  sample-jellybean-vs-strik.txt  sample-tanya-vs-tony.txt  testutils.h
web/: REUSE.toml  bmai.pl  bmai_run.pl  bmai_test.pl  dp_lib.pl  stats.pl
